--- a/BlazorSvgEditor.WasmTest/Pages/Index.razor
+++ b/BlazorSvgEditor.WasmTest/Pages/Index.razor
@@ -1,5 +1,8 @@
 ﻿@page "/"
+@using BlazorSvgEditor.SvgEditor
 
+<div style="display: flex; flex-direction: column">
+    
 <PageTitle>Index</PageTitle>
 
 <h1>Hello, world!</h1>
@@ -7,3 +10,7 @@
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?"/>
+
+<SvgEditor></SvgEditor>
+
+</div>
