implement unselect features

--- a/BlazorSvgEditor.SvgEditor/ShapeEditors/CircleEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/ShapeEditors/CircleEditor.razor
@@ -20,5 +20,7 @@
         stroke-dashoffset="@SvgElement.StrokeDashoffset.ToInvariantString()"
 
         fill="@SvgElement.Fill"
-        fill-opacity="@SvgElement.FillOpacity.ToInvariantString()">
+        fill-opacity="@SvgElement.FillOpacity.ToInvariantString()"
+
+        style="cursor: move">
 </circle>
