--- a/BlazorSvgEditor.SvgEditor/SvgEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/SvgEditor.razor
@@ -4,44 +4,6 @@
 @using BlazorSvgEditor.SvgEditor.Helper
 
 
-
-
-@*
-<div style="border: 3px solid black; height: 60vh; width: 100%; overflow: hidden; display: flex;"
-     @onwheel="OnContainerWheel"
-     
-     oncontextmenu="return false"
-     
-     @onpointerdown="OnContainerPointerDown"
-     @onpointerdown:stopPropagation="true"
-     
-     @onpointermove="OnContainerPointerMove"
-        @onpointerup="OnContainerPointerUp"
->    
-        <svg
-             @ref="SvgElementReference"
-             @onpointerdown="OnSvgPointerDown">
-            
-            <rect fill="green" fill-opacity="0.3" height="100%" width="100%" @onpointerdown="UnSelect"></rect>
-            <foreignObject class="unselectable" x="5" y="0" height="22" width="150" style="font-size:20px;pointer-events:none;touch-action:none;">Scale 1:@(Math.Round(Scale, 3).ToString())</foreignObject>
-
-                    <image href="@ImageSource" height="100%" width="100%" style="transform: translate(@(Translate.X.ToInvariantString())px, @(Translate.Y.ToInvariantString())px) scale(@Scale.ToInvariantString())"/>
-                    
-                    
-                    
-                    @foreach(var shape in Shapes)
-                            {
-                                <DynamicComponent Type="shape.Presenter" Parameters="@(new Dictionary<string, object>(){{"SvgElement", shape}})"/>
-                            }
-            
-        
-            
-        </svg>
-    
-</div>
-
-*@
-
 <div style="border: 3px solid black; height: 60vh; width: 100%;" @ref="ContainerElementReference"
      @onwheel="OnContainerWheel"
      
@@ -56,7 +18,7 @@
         <g style="transform: translate(@(Translate.X.ToInvariantString())px, @(Translate.Y.ToInvariantString())px) scale(@Scale.ToInvariantString())" viewbox="0 0 @ImageSize.Width @ImageSize.Height" @ref="SvgGElementReference">
             <image href="@ImageSource"/>
             
-            <rect height="@(ImageSize.Height)px" width="@(ImageSize.Width)px" @onpointerdown="OnUnselectPanelPointerDown"></rect>
+            <rect height="@(ImageSize.Height)px" fill="transparent" width="@(ImageSize.Width)px" @onpointerdown="OnUnselectPanelPointerDown"></rect>
             
             @foreach (var shape in Shapes)
             {
