--- a/BlazorSvgEditor.SvgEditor/SvgEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/SvgEditor.razor
@@ -13,7 +13,7 @@
      @onpointermove="OnContainerPointerMove"
      @onpointerup="OnContainerPointerUp">
 
-    <svg style="height: 100%; width: 100%;">
+    <svg style="height: 100%; width: 100%; cursor: pointer">
 
         <g style="transform: translate(@(Translate.X.ToInvariantString())px, @(Translate.Y.ToInvariantString())px) scale(@Scale.ToInvariantString())" viewbox="0 0 @ImageSize.Width @ImageSize.Height" @ref="SvgGElementReference">
             <image href="@ImageSource"/>
