little design improvements

--- a/BlazorSvgEditor.WasmTest/Pages/Index.razor
+++ b/BlazorSvgEditor.WasmTest/Pages/Index.razor
@@ -3,13 +3,8 @@
 
 <div style="display: flex; flex-direction: column">
     
-<PageTitle>Index</PageTitle>
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?"/>
+<h4 style="margin-bottom: 10px;">SvgEditor Test</h4>
+    
 
 <SvgEditor></SvgEditor>
 
