--- a/BlazorSvgEditor.SvgEditor/SvgEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/SvgEditor.razor
@@ -46,4 +46,7 @@
 
 </div>
 
-<button class="btn btn-primary" @onclick="TestButton">TestButton</button>
+<div style="display: flex; flex-direction: column">
+    <button class="btn btn-primary" @onclick="TestButton">TestButton</button>
+    <button class="btn btn-primary" @onclick="() => AddElement(ShapeType.Circle)">AddCircle</button>
+</div>
