--- a/BlazorSvgEditor.WasmTest/Pages/Index.razor
+++ b/BlazorSvgEditor.WasmTest/Pages/Index.razor
@@ -6,6 +6,6 @@
 <h4 style="margin-bottom: 10px;">SvgEditor Test</h4>
     
 
-<SvgEditor></SvgEditor>
+<SvgEditor MinScale="0.8"></SvgEditor>
 
 </div>
