--- a/BlazorSvgEditor.SvgEditor/ShapeEditors/RectangleEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/ShapeEditors/RectangleEditor.razor
@@ -22,14 +22,16 @@
       
       fill="@SvgElement.Fill"
       fill-opacity="@SvgElement.FillOpacity.ToInvariantString()"
->
+
+      style="cursor: @(SvgElement.State == ShapeState.Selected ? "move" : "pointer")">
+
 </rect>
 
 
 @if (SvgElement.State == ShapeState.Selected && SvgElement.SvgEditor.EditMode != EditMode.Add)
 {
-      <Anchor OnPointerDown="() => OnAnchorSelected(0)" Position="new Coord<double>(SvgElement.X, SvgElement.Y)" />
-      <Anchor OnPointerDown="() => OnAnchorSelected(3)" Position="new Coord<double>(SvgElement.X, SvgElement.Y + SvgElement.Height)" />
-      <Anchor OnPointerDown="() => OnAnchorSelected(1)" Position="new Coord<double>(SvgElement.X + SvgElement.Width, SvgElement.Y)" />
-      <Anchor OnPointerDown="() => OnAnchorSelected(2)" Position="new Coord<double>(SvgElement.X + SvgElement.Width, SvgElement.Y + SvgElement.Height)" />
+      <Anchor OnPointerDown="() => OnAnchorSelected(0)" CssCursor="nwse-resize" Position="new Coord<double>(SvgElement.X, SvgElement.Y)" />
+      <Anchor OnPointerDown="() => OnAnchorSelected(1)" CssCursor="nesw-resize" Position="new Coord<double>(SvgElement.X + SvgElement.Width, SvgElement.Y)" />
+      <Anchor OnPointerDown="() => OnAnchorSelected(2)" CssCursor="nwse-resize" Position="new Coord<double>(SvgElement.X + SvgElement.Width, SvgElement.Y + SvgElement.Height)" />
+      <Anchor OnPointerDown="() => OnAnchorSelected(3)" CssCursor="nesw-resize" Position="new Coord<double>(SvgElement.X, SvgElement.Y + SvgElement.Height)" />
 }
