implement basic poligon model (no add no edit no good algorithm)

--- a/BlazorSvgEditor.SvgEditor/SvgEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/SvgEditor.razor
@@ -50,4 +50,6 @@
     <button class="btn btn-primary" @onclick="TestButton">Test Button</button>
     <button class="btn btn-primary" @onclick="() => AddElement(ShapeType.Circle)">Add Circle</button>
     <button class="btn btn-primary" @onclick="() => AddElement(ShapeType.Rectangle)">Add Rectangle</button>
+        <button class="btn btn-primary" @onclick="() => AddElement(ShapeType.Polygon)">Add Polygon</button>
+
 </div>
