--- a/BlazorSvgEditor.SvgEditor/ShapeEditors/PolygonEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/ShapeEditors/PolygonEditor.razor
@@ -23,3 +23,24 @@
          style="cursor: @(SvgElement.State == ShapeState.Selected ? "move" : "pointer")">
 
 </polygon>
+
+
+@if (SvgElement.State == ShapeState.Selected && SvgElement.SvgEditor.EditMode != EditMode.Add)
+{
+    for (int i = 0; i < SvgElement.Points.Count; i++)
+    {
+        int j = i;
+        <Anchor OnPointerDown="() => OnAnchorSelected(j)" CssCursor="nwse-resize" Position="new Coord<double>(SvgElement.Points[i].X, SvgElement.Points[i].Y)" />
+        
+        var firstPointIndex = i;
+        var secondPointIndex = i + 1;
+        
+        if (secondPointIndex >= SvgElement.Points.Count) secondPointIndex = 0;
+        
+        <Anchor RingColor="grey" OnPointerDown="() => OnAnchorSelected(j + SvgElement.Points.Count)" CssCursor="nwse-resize" 
+                Position="new Coord<double>((SvgElement.Points[firstPointIndex].X + SvgElement.Points[secondPointIndex].X)/2, (SvgElement.Points[firstPointIndex].Y + SvgElement.Points[secondPointIndex].Y)/2)" />
+    }
+
+  
+    
+}
