--- a/BlazorSvgEditor.SvgEditor/SvgEditor.razor
+++ b/BlazorSvgEditor.SvgEditor/SvgEditor.razor
@@ -9,6 +9,8 @@
      
      oncontextmenu="return false"
      
+     @ondblclick="OnContainerDoubleClick"
+     
      @onpointerdown="OnContainerPointerDown"
      @onpointermove="OnContainerPointerMove"
      @onpointerup="OnContainerPointerUp">
